[package]
name = "stackment-crypto-mod"
version = "0.1.0"
authors = ["Daniel Vogelbacher <daniel@chaospixel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
dirs = "2.0.2"
rust-ini = "0.13.0"
rand = "0.7.0"
rand_core = "0.5.1"
libc = "0.2.0"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
tempfile = "3"
bytes = { version = "0.5", features = [] }
serde_cbor = "0.11.1"
ring = "0.16.9"
snow = { version = "0.6.2", features = ["ring-accelerated"] }
x25519-dalek = "0.6.0"
yasna = { version = "0.3.1", features = ["chrono"] }
data-encoding = "2.1.2"

